picker行高问题 vant 样式定义 postcss 测试

--- a/manifest.json
+++ b/manifest.json
@@ -105,6 +105,7 @@
         },
         "sdkConfigs" : {
             "maps" : {}
-        }
+        },
+        "domain" : "thetime50.com"
     }
 }
